chore(Backend): Update example.env

--- a/backend/example.env
+++ b/backend/example.env
@@ -1,2 +1,9 @@
 DATABASE_USERNAME=""
 DATABASE_PASSWORD=""
+DATABASE_URI=""
+PLAID_CLIENT_ID=
+PLAID_SECRET=
+PLAID_ENV=
+PLAID_PRODUCTS=
+PLAID_COUNTRY_CODES=
+PLAID_REDIRECT_URI=
